--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -23,11 +23,6 @@ footer links grey: #454245
   padding: 0;
 }
 
-h1,
-h2,
-h3,
-h4 {}
-
 h3 {
   font-weight: bold;
   text-align : center;
@@ -102,7 +97,7 @@ nav {
   border-radius   : 2px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   .navbar ul {
     display        : flex;
     justify-content: space-evenly;
@@ -241,7 +236,7 @@ nav {
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   #hero {
     display       : flex;
     align-items   : center;
@@ -277,6 +272,40 @@ nav {
     width     : 100%;
     overflow-y: unset;
     height    : 40vw;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #hero-content {
+    margin-right    : 0;
+    margin-left     : 5rem;
+    padding-right   : 0;
+    background-image: none;
+  }
+
+  #hero-content h1 {
+    margin-bottom: 10rem;
+  }
+
+  #sign-up-button-container {
+    flex-direction : row;
+    justify-content: space-between;
+  }
+
+  #sign-up-button-container button {
+    width : 49%;
+    margin: 0;
+  }
+
+  #hero-image-container {
+    width          : 100%;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+  }
+
+  #hero-image {
+    width: 60%;
   }
 }
 
@@ -418,7 +447,7 @@ nav {
   }
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1440px) {
+@media screen and (min-width: 1024px) {
   #cta div {
     flex-direction : row;
     justify-content: center;
@@ -429,59 +458,60 @@ nav {
     padding-left : 20px;
     padding-right: 20px;
   }
+}
 
-  /* footer */
+/* footer */
 
-  footer hr {
-    margin: 40px 20px 20px 20px;
-  }
+footer hr {
+  margin: 40px 20px 20px 20px;
+}
 
+#quick-links {
+  display       : flex;
+  flex-direction: column;
+}
+
+#quick-links li {
+  font-size      : 0.8em;
+  font-weight    : bold;
+  list-style-type: none;
+  padding        : 20px;
+}
+
+#quick-links img {
+  padding-right: 10px;
+}
+
+#quick-links li:last-of-type {
+  color: var(--linkBlue);
+}
+
+#social-media {
+  display        : flex;
+  justify-content: space-between;
+  margin         : 40px 20px;
+}
+
+#social-media li {
+  list-style-type: none;
+}
+
+#social-media i {
+  font-size: 1.5em;
+}
+
+#small-bottom-text {
+  text-align: center;
+  color     : var(--grey);
+  padding   : 0 30px 30px;
+}
+
+@media screen and (min-width: 768px) {
   #quick-links {
-    display       : flex;
-    flex-direction: column;
-  }
-
-  #quick-links li {
-    font-size      : 0.8em;
-    font-weight    : bold;
-    list-style-type: none;
-    padding        : 20px;
-  }
-
-  #quick-links img {
-    padding-right: 10px;
-  }
-
-  #quick-links li:last-of-type {
-    color: var(--linkBlue);
+    flex-direction: row;
   }
 
   #social-media {
-    display        : flex;
-    justify-content: space-between;
-    margin         : 40px 20px;
+    width: 35%;
   }
-
-  #social-media li {
-    list-style-type: none;
-  }
-
-  #social-media i {
-    font-size: 1.5em;
-  }
-
-  #small-bottom-text {
-    text-align: center;
-    color     : var(--grey);
-    padding   : 0 30px 30px;
-  }
-
-  @media screen and (min-width: 768px) {
-    #quick-links {
-      flex-direction: row;
-    }
-
-    #social-media {
-      width: 35%;
-    }
-  }
+}
